--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./src/css/reset.css">
-  <link rel="stylesheet" href="./src/css/variables.css">
   <link rel="stylesheet" href="./src/css/style.css">
+
   <title>Frontend Mentor | Advice generator app</title>
+
 </head>
+
 <body>
-    <script src="./src/js/script.js"></script>
+
+  <section>
+    <div class="tittle">
+      <p>ADVICE #117</p>
+    </div>
+    <div class="text">
+      <h1>"It is to sit up and take notice, what's difficult is getting up and taking action"</h1>
+    </div>
+    <div class="line">
+      <img src="src/images/pattern-divider-desktop.svg">
+    </div>
+    <div class="button">
+      <button>
+        <img src="src/images/icon-dice.svg">
+      </button>
+    </div>
+  </section>
+
+  <script src="./src/js/script.js"></script>
+
 </body>
+
 </html>
