--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <p>ADVICE #117</p>
     </div>
     <div class="text">
-      <h1>"It is to sit up and take notice, what's difficult is getting up and taking action"</h1>
+      <h1>"It is to sit up and take <br>
+        notice, what's difficult is getting <br>
+        up and taking action"</h1>
     </div>
     <div class="line">
       <img src="src/images/pattern-divider-desktop.svg">
